[tool.poetry]
name = "data-analysis-pandas"
version = "0.1.0"
description = ""
authors = ["Reema Eilouti <reema.eilouti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
jupyterlab = "^3.0.16"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
